syntax = "proto3";

option go_package = "internal/grpc";
option java_multiple_files = true;
option java_package = "io.grpc.examples.QueueingBot";
option java_outer_classname = "QueueingBotProto";

package QueueingBot;

// Сервис, который предоставляет метод для получения информации о точке
service QueueingBot {
  rpc Handle(QueuingMessage) returns (QueuingBoolResult) {}
  rpc HandleMessage(QueuingMessage) returns (QueuingJsonResult) {}
  rpc HandleCallback(QueuingCallback) returns (QueuingBoolResult) {}
}


message QueuingMessage {
  uint64 message_id = 1;
  int64 from_chat_id = 2;
  string text = 5;
}

message QueuingCallback{
  uint64 message_id = 1;
  string text = 5;
}

message QueuingBoolResult {
   bool result = 1;
}

message QueuingJsonResult {
  string result = 1;
}
